--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ author:
   name             : "Mahdi Ul Bari"
   pronouns         : # example: "she/her"  
   bio              : "Physiotherapist | Researcher | Creative Work Enthusiast"
-  location         : "Savar, Dhaka-1343, Bangladesh"
-  employer         : "Centre for the Rehabilitation of the Paralysed"
+  location         : "Dhaka,Bangladesh"
+  employer         : "CRP"
   uri              : # URL
   email            : "mahdiulbari@gmail.com" 
 
